--- a/home.html
+++ b/home.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>welcome to the clube🌠</title>
 </head>
 <body>
-    <h1>hello</h1>
+    <h1>👋 Hello</h1>
     <form action="mailto:halahansari@gmail.com" method="post" enctype="text/plain">
         <label>
             send email
